samples/_failures_safe/1761655038_0b3705_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00bdcd12.c: In function ‘main’:
./samples/SAFE/__tmp_00bdcd12.c:154:13: error: expected declaration or statement at end of input
  154 |             printf("Failed to reset from ERROR state\n");
      |             ^~~~~~
./samples/SAFE/__tmp_00bdcd12.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00bdcd12.c:154:13: error: expected declaration or statement at end of input
